# grammar-demo

./: README.md  docker-compose.prod.yml  docker-compose.yml
back/: .dockerignore  .env.example  Dockerfile  app.py  prompts.json  pyproject.toml
front/: .dockerignore  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc.cjs  Dockerfile  index.html  package.json  pnpm-lock.yaml  postcss.config.cjs  tailwind.config.cjs  tsconfig.json  vite.config.ts
front/src/: main.tsx
front/src/assets/: data.ts
front/src/components/: App.tsx  Footer.tsx  Grammarify.tsx  Header.tsx
front/src/components/lib/flowbite/: Button.tsx  Container.tsx  ThemeSwitcher.tsx  Tooltip.tsx
front/src/components/lib/loaders/: Audio.tsx  BallTriangle.tsx  Bars.tsx  Circles.tsx  Grid.tsx  Hearts.tsx  Oval.tsx  Puff.tsx  Rings.tsx  SpinningCircles.tsx  TailSpin.tsx  ThreeDots.tsx  index.ts
front/src/components/ui/: Container.tsx  ResultViewer.tsx  SocialLinks.tsx  SourceEditor.tsx  TextEditor.tsx  TextRenderer.tsx
