[tool.poetry]
name = "grammar-demo"
version = "0.2.0"
description = ""
authors = ["Evgeny Nizhibitsky <nizhib@github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.1"
pydantic = "^1.10.7"
python-dotenv = "^1.0.0"
ujson = "^5.7.0"
uvicorn = "^0.22.0"
openai = "^0.27.6"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
