[tool.poetry]
name = "grammar-demo"
version = "0.2.1"
description = ""
authors = ["Evgeny Nizhibitsky <nizhib@github.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.1"
pydantic = "^2.1.1"
python-dotenv = "^1.0.0"
ujson = "^5.8.0"
uvicorn = "^0.23.2"
openai = "^0.27.8"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
